Add more Header updates and start SearchResults

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -80,6 +80,11 @@ ion-content {
   --background: #f6fafd;
 }
 
+ion-toolbar {
+  --color: white;
+  --background: #5470c8;
+}
+
 ion-footer {
   --background: #f6fafd;
 }
