--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,6 @@
 .container {
   position: relative;
+  top: -5px;
   margin-bottom: 1rem;
 }
 
@@ -7,11 +8,6 @@
   color: white;
   position: absolute;
   left: 1.2rem;
-}
-
-.above-text {
-  top: 1rem;
-  font-size: 1.2rem;
 }
 
 .main-text {
