--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -1,3 +1,12 @@
 .flex {
   display: flex;
 }
+
+.flex-direction-column {
+  flex-direction: column;
+}
+
+.divider {
+  height: 1px;
+  background-color: lightgrey;
+}
