--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -20,12 +20,12 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-secondary-tint: lighten(--ion-color-primary, 3%);
 
   /** tertiary **/
-  --ion-color-tertiary: #7044ff;
+  --ion-color-tertiary: #142968;
   --ion-color-tertiary-rgb: 112, 68, 255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #633ce0;
-  --ion-color-tertiary-tint: #7e57ff;
+  --ion-color-tertiary-shade: darken(--ion-color-tertiary, 3%);
+  --ion-color-tertiary-tint: lighten(--ion-color-tertiary, 3%);
 
   /** success **/
   --ion-color-success: #10dc60;
